Basic framework created.

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,8 +56,8 @@
         <div class="submit_container"></div>
     </div>
     <script>
-        var dataUrl = '/static/json/sample_data.json';
-        var postUrl = '/<post_url>'; // This is where data posts to
+        var dataUrl = '/api/';
+        var postUrl = '/api/'; // This is where data posts to
     </script>
 </body>
 </html>
