--- a/templates/index.html
+++ b/templates/index.html
@@ -28,6 +28,9 @@
             <div class="divider"></div>
         </div>
         <div class="col s6">
+            Annotated : {{annotated}} <br>
+            Not Annotated : {{not_annotated}} <br>
+            Skipped : {{skipped}} <br>
         </div>
         <div class="col s6 ">
             <div class="right" style="padding-top: 10px;">
